--- a/docs/team/limyijie.adoc
+++ b/docs/team/limyijie.adoc
@@ -25,7 +25,7 @@ Note the common symbols and formatting used in this document.
 |===
 | image:./icons/important.png[] | Important information.
 | `show` | A grey highlight indicates that this is a command that can be executed in the command line
-| `bluetext` | A blue text with grey highlight indicates that this is a class or component in TimeBook.
+| +bluetext+ | A blue text with grey highlight indicates that this is a class or component in TimeBook.
 |===
 
 === Overview of contributions
@@ -38,15 +38,14 @@ This section provides an overview of the code, documentation and administrative 
 * Highlights: This feature that I have implemented fits well with the other features that my teammates developed. For example, one of my teammates developed
 an NUSMods parser that makes use of parsing NUSMods links into data that is then displayed using my feature. Implementing this feature is not easy as I had to first create an empty time table
 and figure out a way to add events (represented by blocks) into this empty time table without distorting the other time table cells. This means that I had to ensure
-that no matter how small the event's duration is, it must still fit and not cause distortion in the schedule graphic. In addition, I needed to ensure that the final schedule graphic can be
-controlled. Lastly, I had to test my feature using TestFX to make sure that the graphic generated is correct.
+that no matter how small the event's duration is, it must still fit and not cause distortion in the schedule graphic. Lastly, I had to test my feature using TestFX to make sure that the graphic generated is correct.
 * Credits: TestFX for providing a framework for automated GUI testing.
 
 Other contributions:
 
 * Application
 ** Developed GUI color scheme and UI layout such as schedule window display, tabs panel and default home
-page to make significant cosmetic improvement to application. #86 #93 #125 #254
+page to make significant cosmetic improvement to the application. #86 #93 #125 #254
 ** Wrote GUI Test cases that increased coverage by about 4.3%. #263 #268
 * Community
 ** Helped to develop non-trivial UI components for my team members. #237
@@ -59,8 +58,6 @@ page to make significant cosmetic improvement to application. #86 #93 #125 #254
 === Contributions to User Guide
 Our team had to override the original addressbook User Guide with the instructions for TimeBook. This section shows my contributions
 to the User Guide and my ability to convey instructions for the application that my team has developed to target users.
-
-include::../UserGuide.adoc[tag=showperson]
 
 include::../UserGuide.adoc[tag=showgroup]
 
