--- a/docs/UserGuide.adoc
+++ b/docs/UserGuide.adoc
@@ -82,7 +82,7 @@ image::searchIpMan.png[width='500']
 
 * **`add`** `2` : Adds "Ip Man" (2008) shown in entry 2 in Figure 3 into your watchlist.
 
-.Watchlist page after entry.
+.Watchlist page after adding the entry.
 image::watchlistIpMan.png[width='500']
 
 And that's it. Our <<Quick Start, quick start guide>> will guide you to set up our application. If you like to learn more head straight into our <<Features, features guide>> for a run down on our major features, or
@@ -132,6 +132,7 @@ The user can navigate to this list by clicking the “Watched” tab on the side
 * Last watched episode (For TV series that have been updated using the `watch` command)
 * Checkbox to indicate if the show has been watched
 
+.Main page of the UI: watchlist page
 image::Ui.png[width="790"]
 
 
